--- a/index.html
+++ b/index.html
@@ -2,18 +2,16 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximun-scale=1.0 user-scalable=no">
-		<title>Leaflet on mobile</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<title>Leaflet Mobile</title>
 		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
-		<link rel="stylesheet" href="css/style.css" type="text/css">
-
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		
 		<div id="map"></div>
-
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
-		<script type="text/javascript" src="js/mapa.js"></script>
+		<script type="text/javascript" src="js/geoJSON.js"></script>
+		<script type="text/javascript" src="js/uso.js"></script>
 	</body>
 </html>
